--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "type-check": "tsc --noEmit"
+  },
+  "dependencies": {
+    "axios": "^1.1.2",
+    "moment": "^2.29.4"
   }
 }
